# many_tokenizer_as_one_model

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  run.py
config/: demo.jsonnet
data/sample/: train.sudachia  train.sudachib  train.sudachic  train_dataset.json
many_tokenizer_as_one_model/: __init__.py  multi_criterion_dataset_reader.py  multi_criterion_tokenizer.py  tokenize_predictor.py  train.py
notebook/: example.ipynb
src/: multi_criterion_dataset_reader.py  multi_criterion_tokenizer.py  tag_scheme.py  tokenize_predictor.py
