[tool.poetry]
name = "many_tokenizer_as_one_model"
version = "0.1.0"
description = ""
authors = ["mana-ysh <int.toshi13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
allennlp = "^1.0.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
